--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "iraq-war",
+  "name": "iraqWar",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "node main.js",
-    "build": "ng build",
+    "start:prod": "node server.js",
+    "build:prod": "npm run build --prod",
+    "build": "npm run build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -19,6 +21,7 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "express": "^4.17.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
