--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node main.js",
+    "start:dev": "ng serve",
     "start:prod": "node server.js",
     "build:dev": "ng build",
     "build": "ng build --prod",
