--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "express": "^4.17.1",
+    "ng2-pdf-viewer": "^7.0.1",
     "pdfjs": "^2.4.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
