--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "ng2-pdf-viewer": "^7.0.1",
     "rxjs": "~6.6.0",
